        settings given for the class decorator (via settings= and/or
        keyword parameters) apply to every method.
        If a method of the class is already deco'd, the settings it
        supplies override those given at the class level :)
        TODO: keywords for class level:
        todo    omit=(method, ...), only=(method, ...)

        TODO document this
        TODO test more/thoroughly

      - prefix is now "mutable" -- it's how we got "prefix='C.'" at class level
        to apply to already-deco'd methods :)
        TODO document that / update docs to reflect
        TODO test it -- dynamically change 'prefix' in various ways, test
        todo    at both ends of call chains

      - record_history wasn't using @used_unused_keywords for
        __init__, and wasn't passing its used_keywords, so prefix was
        getting set to ''. Had to run tests on a weird machine to find
        this out (TODO why didn't these fail on normal dev machine???)
        Fixed.

      - Removed deprecated 'settings_path' keyword parameter.
        Updated `test_log_calls_more.py` (removed 'settings_path' test).

0.2.5.post3
      - later binding for `prefix`, necessary for a real-world test,
        and perhaps on the way to making it mutable / allowing indirect values
0.2.5.post2
      - same as .post1, but for version string :|
0.2.5.post1
      - don't warn about deprecated `settings_path` ALL the time :|
0.2.5
      - Timing/profiling enhancements & additions:
        to take advantage of the Python 3.3+ improvements to the time
        module, as described in PEP 418 https://www.python.org/dev/peps/pep-0418/
        and the Python docs https://docs.python.org/3/library/time.html

        For "elapsed" time i.e. wall time, use the highest-resolution timer,
        time.perf_counter(), if it's available (Python 3.3+);
        o/w use time.time().
        We now also report CPU time (process time: sum of kernel and user CPU time),